--- a/app/src/main/res/layout/custom_layout.xml
+++ b/app/src/main/res/layout/custom_layout.xml
@@ -18,11 +18,12 @@
 
             <TextView
                 android:id="@+id/textView8"
+                style="@style/CustomText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:width="350dp"
-                android:text="Город" />
+                android:text="@string/city" />
 
             <Spinner
                 android:id="@+id/spinner"
@@ -41,11 +42,12 @@
 
             <TextView
                 android:id="@+id/textView"
+                style="@style/CustomText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:width="350dp"
-                android:text="Имя объекта" />
+                android:text="@string/object" />
 
             <EditText
                 android:id="@+id/editText"
@@ -54,7 +56,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="Имя объекта"
+                android:hint="@string/object"
                 android:inputType="textPersonName" />
         </LinearLayout>
 
@@ -65,11 +67,12 @@
 
             <TextView
                 android:id="@+id/textView2"
+                style="@style/CustomText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:width="350dp"
-                android:text="Улица и дом" />
+                android:text="@string/street_Home" />
 
             <EditText
                 android:id="@+id/editText2"
@@ -77,7 +80,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="Улица и дом"
+                android:hint="@string/street_Home"
                 android:inputType="textPersonName" />
         </LinearLayout>
 
@@ -88,11 +91,12 @@
 
             <TextView
                 android:id="@+id/textView9"
+                style="@style/CustomText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:width="350dp"
-                android:text="Дата проведения испытания" />
+                android:text="@string/exp_date" />
 
             <Spinner
                 android:id="@+id/spinner2"
@@ -110,11 +114,12 @@
 
             <TextView
                 android:id="@+id/textView3"
+                style="@style/CustomText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:width="350dp"
-                android:text="ФИО заказчика" />
+                android:text="@string/client" />
 
             <EditText
                 android:id="@+id/editText3"
@@ -122,7 +127,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="ФИО заказчика"
+                android:hint="@string/client"
                 android:inputType="textPersonName" />
         </LinearLayout>
 
@@ -133,11 +138,12 @@
 
             <TextView
                 android:id="@+id/textView4"
+                style="@style/CustomText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:width="350dp"
-                android:text="Температура воздуха" />
+                android:text="@string/temperature" />
 
             <EditText
                 android:id="@+id/editText4"
@@ -145,7 +151,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="Температура воздуха"
+                android:hint="@string/temperature"
                 android:inputType="textPersonName" />
         </LinearLayout>
 
@@ -156,11 +162,12 @@
 
             <TextView
                 android:id="@+id/textView5"
+                style="@style/CustomText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:width="350dp"
-                android:text="Влажность воздуха" />
+                android:text="@string/humidity" />
 
             <EditText
                 android:id="@+id/editText5"
@@ -168,7 +175,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="Влажность воздуха"
+                android:hint="@string/humidity"
                 android:inputType="textPersonName" />
         </LinearLayout>
 
@@ -179,11 +186,12 @@
 
             <TextView
                 android:id="@+id/textView6"
+                style="@style/CustomText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:width="350dp"
-                android:text="Атмосферное давление" />
+                android:text="@string/pressure" />
 
             <EditText
                 android:id="@+id/editText6"
@@ -191,7 +199,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="Атмосферное давление"
+                android:hint="@string/pressure"
                 android:inputType="textPersonName" />
         </LinearLayout>
 
@@ -202,11 +210,12 @@
 
             <TextView
                 android:id="@+id/textView7"
+                style="@style/CustomText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:width="350dp"
-                android:text="Номер отчета" />
+                android:text="@string/report_number" />
 
             <EditText
                 android:id="@+id/editText7"
@@ -214,7 +223,7 @@
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
                 android:ems="10"
-                android:hint="Номер отчета"
+                android:hint="@string/report_number"
                 android:inputType="textPersonName" />
         </LinearLayout>
 
