--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,12 +6,14 @@
     android:orientation="vertical">
 
     <TextView
+        android:id="@+id/question"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         style="@style/CustomText"
         android:text="@string/hello" />
 
     <RadioGroup
+        android:id="@+id/variants"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="vertical">
@@ -51,7 +53,7 @@
         android:orientation="horizontal">
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/previous"
             style="@style/CustomText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -59,7 +61,7 @@
             android:text="@string/back" />
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/next"
             style="@style/CustomText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
