--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,6 +61,14 @@
             android:text="@string/back" />
 
         <Button
+            android:id="@+id/hint"
+            style="@style/CustomText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="@string/hint" />
+
+        <Button
             android:id="@+id/next"
             style="@style/CustomText"
             android:layout_width="wrap_content"
