1. Activity. Жизненный цикл. [#169722] 2. MVC. Создания события и получение данных от пользователя. [#169723] 2.1. Рефакторинг. Ссылки на методы. [#169724] 3. Создание мультиактивности. Передача данных между активностями. [#169725]

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,15 +7,17 @@
 
     <TextView
         android:id="@+id/question"
+        style="@style/CustomText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        style="@style/CustomText"
         android:text="@string/hello" />
 
     <RadioGroup
         android:id="@+id/variants"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:clickable="true"
+        android:onClick="changeRadioGroup"
         android:orientation="vertical">
 
         <RadioButton
@@ -58,7 +60,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="previousBtn"
             android:text="@string/back" />
+
 
         <Button
             android:id="@+id/hint"
@@ -66,6 +70,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="hintBtn"
             android:text="@string/hint" />
 
         <Button
@@ -74,6 +79,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:onClick="nextBtn"
             android:text="@string/next" />
     </LinearLayout>
 
