--- a/app/src/main/res/layout/hint_activity.xml
+++ b/app/src/main/res/layout/hint_activity.xml
@@ -17,5 +17,6 @@
         style="@style/CustomText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:onClick="backBtn"
         android:text="@string/back" />
 </LinearLayout>
