--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -83,5 +83,13 @@
             android:text="@string/next" />
     </LinearLayout>
 
+    <Button
+        android:id="@+id/tests"
+        style="@style/CustomText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Список экзаменов"
+        android:onClick="testsBtn"/>
+
 </LinearLayout>
 
